--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   pointer-events: none;
 }
 
+@keyframes slider{
+  0%{background-image: url(img1.jpg);}
+  35%{background-image: url(img2.jpg);}
+  75%{background-image: url(img3.jpg);}
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
